processor/src/test/resources/good/deferred-processing/Bar.java
package foo;

import io.norberg.automatter.AutoMatter;

@AutoMatter
public interface Bar {
}