processor/src/test/resources/bad/UnknownFieldType.java
import io.norberg.automatter.AutoMatter;

@AutoMatter
public interface UnknownFieldType {
  Foo foo();
}